Fixing horizontal scroll hopefully

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -138,6 +138,7 @@ body {
     position: fixed;
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
     background: white;
     z-index: 3;
     top: 0;
